test_case/rust-lang_rust/58377_462412735_13.rs
\n"},"level":"error","spans":[{"file_name":"/checkout/src/test/ui/coercion/coerce-expect-unsized-ascribed.rs","byte_start":1268,"byte_end":1287,"line_start":25,"line_end":25,"column_start":13,"column_end":32,"is_primary":true,"text":[{"text":"    let _ = Box::new([1, 2, 3]): Box<[i32]>; //~ ERROR mismatched types","highlight_start":13,"highlight_end":32}],"label":"expected slice, found array of 3 elements","suggested_replacement":null,"suggestion_applicability":null,"expansion":null}],"children":[{"message":"expected type `std::boxed::Box<[i32]>`\n   found type `std::boxed::Box<[i32; 3]>`","code":null,"level":"note","spans":[],"children":[],"rendered":null}],"rendered":"error[E0308]: mismatched types\n  --> /checkout/src/test/ui/coercion/coerce-expect-unsized-ascribed.rs:25:13\n   |\nLL |     let _ = Box::new([1, 2, 3]): Box<[i32]>; //~ ERROR mismatched types\n   |             ^^^^^^^^^^^^^^^^^^^ expected slice, found array of 3 elements\n   |\n   = note: expected type `std::boxed::Box<[i32]>`\n              found type `std::boxed::Box<[i32; 3]>`\n\n"}
[01:05:24] {"message":"mismatched types","code":{"code":"E0308","explanation":"\nThis error occurs when the compiler was unable to infer the concrete type of a\nvariable. It can occur for several cases, the most common of which is a\nmismatch in the expected type that the compiler inferred for a variable's\ninitializing expression, and the actual type explicitly assigned to the\nvariable.\n\nFor example:\n\n